style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}
body{
    background-position: center; 
    background-size: 100%;
    background-size: cover;
}
body.index{
background-color:rgb(232, 232, 237);
}
body.contact{
background-image: url("images/OldBrickWall3.svg");
}
body.intro{
    background-image:url("images/1675343219wall-in-interior-room.svg");
}
body.blog{
    background-color:ghostwhite;
}
.sidebar{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    /*background-color: red*/
    background-color:rgb(17, 82, 104);
    width: 200px;
    max-width: 100%;
    height:auto;
   
}
.sidebar > nav{
    padding: 15px;
}

nav > ul > li{
    list-style: none;
    font-size: 30px;
    padding: 30px 0px;
    text-decoration: none;
}
nav > ul > li > a{
    text-decoration: none;
    color:white;
}
nav > ul > li > a:hover{
    color:black;
    background-color: white;
    border-radius: 8px;
    padding: 4px;
}
.container{
    display: flex;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
   
}
.devinfo{
    display: block;
    flex-direction: column;
    align-items: center;
   justify-content: center;
   display: flex;
    gap: 16px;
    font-family:'Courier New', Courier;
    font-size:28px;
    color: rgb(6, 2, 2);
    font-weight: bold;

}
.main{
    box-sizing: border-box;
    flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 100vh; /* Use viewport height to fill the entire screen */
   overflow:hidden;
   overflow-y: hidden;
   
   /* You can customize the border style, color, and width */
   box-sizing: border-box;
}
.hello{
    font: bolder;
}
.name{
    font: bolder;
}
.about{
    font: bolder;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.profileimage > img{
    height: 18rem;
    width:17rem ;
    border-radius: 50%;
   
    box-shadow: none;
}
.btns{
    height: 45px;
    width: 145px;
    background-color: rgb(15, 11, 7);
    border: none;
    border-radius: 8px;
    color:rgb(240, 237, 237);
    font-weight: bolder;
    cursor: pointer;
}
.buttons{
    display: flex;
    gap: 18px;
    margin-top: 20px;
}
.moredetails{
    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
    font-size: large;
    padding: 18px;
    text-align: start;
    color: rgb(205, 76, 12);
}
.btns a{
    text-decoration: none;
}
.btns:hover{
    background-color:rgb(6, 10, 10);
    color: rgb(32, 201, 210);
}

/* contact*/
.maincontact {
    font-size: 40px;
    margin-top: 0;
    text-align: center;
    margin-bottom: 20px;

}
.contact-info {
    background-color: #f2f2ef;
    padding: 15px;
    border-radius: 10px;
    align-content: center;
    box-shadow: #555;
    margin: 0 auto; /* Center the contact-info horizontally */
    width: 500px;
    height: 400px;
    font-size: larger;
    align-items: center;
}
.contact-info h2 {
    margin-top: 0;
    color: #333;
}
.contact-info p {
    margin: 10px 0;
    color: #555;
}


.main_intro{
   /* border: 2px solid;*/
    display: flex;
    flex-direction: column;
    gap: 8px;
    /*align-items: center;*/
    justify-content: start;
    padding: 16px;
    overflow-y: hidden;
}
.intro_head{
    text-align: center;
    color: black;
    margin-top: 2px;
    padding:8px;
    padding-left: 8px;
    background: rgb(245, 240, 240);
    border-radius: 8px;
}
.skillsectionheading{
    display: flex;
    align-items: center;
    color: rgb(251, 251, 252);
    background:rgb(16, 18, 16);
    border-radius: 5px;
    gap: 7px;
    /*justify-content:center;*/
    margin-top: 40px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
.html{
    height: 16px;
    background-color: red;
    width: 31rem;
    margin-left: 42px;
}
.css{
    height: 16px;
    background-color: rgb(20, 240, 101);
    width: 31rem;
   
    margin-left:73px;
}
.javascript{
    height: 16px;
    background-color: rgb(211, 230, 4);
    width: 28rem;
    margin-left: 50px;
}
.react{
    height: 16px;
    background-color: rgb(24, 115, 212);
    width: 23rem;
    margin-left: 100px;
}
.PHP{
    height: 16px;
    background-color: rgb(245, 88, 159);
    width: 26rem;
    margin-left: 48px;
}

.projectsection{
    display: flex;
    gap: 15px;
    flex-wrap: wrap;
    margin-top: 8rem;
}
.project{
    height: 320px;
    width: 270px;
    background-color:rgb(6, 85, 46);
    color: white;
    border-radius: 12px;
    padding: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 35px;
     transform: translateX(0);
     opacity:20;
    transition: transform 0.9s ease, opacity 0.9s ease;
}
.project:hover {
    transform: translateX(-10px);
    opacity: 1;
    background-color: rgb(93, 192, 209);
    color: rgb(3, 3, 23);
}
.project img{
    height: 170px;
    width: 250px;
    margin-top: 0;
    border-radius :8px;;
    border: #ddd;
}
/* Add this code to style the Services section */
.services {
    background-color: aliceblue; /* Background color for the services section */
    padding: 20px;
    width: 1000px;
    border-radius: 8px;
    border:none ;
    margin-top: 25px;
    transition: background-color 0.6s ease-in-out; /* Add a transition for background-color */
}

/* Add a hover effect for the services section */
.services:hover {
    background-color:springgreen; /* Change the background color on hover */
}
.services h1{
    color:darkblue;
    font-family:arial;
}
.moving-text-container {
    overflow: hidden;
    white-space: nowrap;
    width: 100%; /* Adjust the width as needed */
    color: rgb(30, 30, 204);
  }
  
  .moving-text {
    animation: moveText 15s linear infinite; /* Adjust the duration (10s) as needed */
    font-size: 24px; /* Adjust the font size as needed */
    white-space: nowrap;
  }
  
  @keyframes moveText {
    0% {
      transform: translateX(100%); /* Start off-screen to the right */
    }
    100% {
      transform: translateX(-100%); /* Move off-screen to the left */
    }
  }
  
.category {
    margin-bottom: 20px;
    padding: 10px;
    border: 1px solid #ddd;
    border-radius: 8px;
    background-color:rgb(219, 211, 212);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s ease-in-out; /* Add a transition for background-color */
}

/* Add a hover effect for each category */
.category:hover {
    background-color: #f0f0f0; /* Change the background color of the category on hover */
}

.category h3 {
    font-size: 24px;
    color: #333;
}

.category ul {
    list-style-type: disc;
    padding-left: 20px;
}

.category li {
    margin-bottom: 6px;
    font-size: 18px;
}

.category p {
    margin-top: 10px;
    font-size: 20px;
    color: #440de8;
}
section {
    max-width: 800px;
    margin: 20px auto;
    padding: 20px;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

/* Style article elements */
article {
    margin-bottom: 20px;
    background-color:rgb(7, 7, 15);
    border-radius: 8px;
}

/* Style article titles */
article h1 {
    color: #f2efef;
    font-size: 30px;

}

/* Style section headings */
section h2 {
    color: #0f171f;
}

/* Style paragraphs within sections */
section p {
    margin-bottom: 15px;
}

/* Style images within sections */
section img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 20px 0;
    border-radius:8px;
}

/* Style the footer */


footer {
    background-color: #333;
    color: #fff;
    padding: 20px;

    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
}

.footer-content {
    display: flex;
    flex-wrap: wrap;
    gap: 20px; /* Adjust as needed */
    align-items: center;
    margin-left: 250px;
}

  /*--------youtube------------*/
.youtube-link{
    display: inline-block;
    padding: 10px 20px;
    background-color: #fb1818; /* WhatsApp green color */
    color: #fff;
    text-decoration: none;
    border-radius: 45px;
    font-weight: bold;
  }
  
  .youtube-link:hover {
    background-color: #e33411; /* Darker shade on hover */
  }
  

/*--------whatsapp------------*/
.whatsapp-link {
    display: inline-block;
    padding: 10px 20px;
    background-color: #25D366; /* WhatsApp green color */
    color: #fff;
    text-decoration: none;
    border-radius: 45px;
    font-weight: bold;
    justify-content:center;
    margin-left: 70px;
    gap: 25px;
  }
  
  .whatsapp-link:hover {
    background-color: #128C7E; /* Darker shade on hover */
  }
  
/* Default styles for all screen sizes */
/* You can keep your existing CSS rules here */

/* Media query for screens smaller than 768px (e.g., phones) */
@media only screen and (max-width: 600px) {

    /* Adjust styles for smaller screens */
    body {
        background-size:cover; /* Adjust background size for smaller screens */
    }

    .sidebar {
       width: fit-content; /* Make the sidebar take up the full width */
       padding: 5px; /* Adjust padding for smaller screens */
       font-size: 8px;
       flex-direction:column;
       height: 100%;
        }
    .container{
            flex-direction: column;
        }

    .main {
       margin-top:20px;
       height:auto;
       padding: 10px; /* Adjust padding for smaller screens */
       font-size: 8px; /* Reduce font size for smaller screens */
       overflow-x: scroll;

    }
    .footer{
        width: 100%;
        align-content: center;
    }

    .profileimage > img {
        width: 100%; /* Make the profile image full-width on smaller screens */
        height: auto; /* Allow the image to scale proportionally */
        border-radius: 50%;
        flex-direction: column;
    }
}

/* Media query for screens smaller than 1024px (e.g., tablets) */
@media (max-width: 1024px) {
    /* Adjust styles for tablet screens */
    /* Add specific styling for tablets here */
    body{
        background-size:cover;
    }
    .sidebar{
        width:fit-content;
        max-width: none;
        margin: 0;
    }
    .main{
        width: 100%;
        margin: 0;
    }
    .footer{
        width: 100%;
        align-content: center;
    }
    .profileimage >img{
        width: 100%;
        height: auto;
        border-radius: 50%;
        margin-top: 20px;
    }
}

/* Media query for screens smaller than 1440px (e.g., laptops) */
@media (max-width: 1440px) {
    /* Adjust styles for laptop screens */
    /* Add specific styling for laptops here */
   
    .sidebar{
        width: fit-content;
        max-width: 100%;
        margin: 0;
        padding: 10px;
        font-size: small;
    }
    .main{
        width:100%;
        margin-left: 20px; /* Adjust margin as needed */
        padding: 15px;
    }
    .projectsection{
        margin-left: 20px;
    }
    .profileimage >img{
        width: 100%;
        height:auto;
        border-radius: 1;
    }
}

/* Media query for screens larger than 1440px (e.g., PCs) */
@media (min-width: 1441px) {
    /* Adjust styles for PC screens */
    /* Add specific styling for PCs here */
    .sidebar{
       width: auto;
       height: 100%;
    }
    .main{
        width: fit-content;
        column-gap: 20px;
    }
    .buttons{
        margin-top: 50px;
        gap:30px;
    }
    .profileimage >img{
      width: 100%;  
    }
}

